# Shop-ApiTest

./: Dockerfile  README.md  alembic.ini  env.example  requirements.txt
alembic/: env.py
app/api/: __init__.py
app/api/v1/: __init__.py  addresses.py  ai.py  orders.py  users.py
app/core/: celery.py  database.py  exceptions.py  security.py
app/models/: cart.py  payment.py  product.py  user.py
app/services/: __init__.py  cart_service.py  merchant_service.py  order_service.py  payment_service.py
app/tasks/: __init__.py
fastAPI_shop/: docker-compose.yml  pyproject.toml
fastAPI_shop/app/: __init__.py  main.py
fastAPI_shop/app/api/v1/: admin.py  auth.py  cart.py  merchants.py  notifications.py  payments.py  products.py  reviews.py
fastAPI_shop/app/core/: __init__.py  config.py
fastAPI_shop/app/models/: __init__.py  address.py  ai_embedding.py  notification.py  order.py  review.py
fastAPI_shop/app/schemas/: __init__.py  user.py
fastAPI_shop/app/services/: ai_service.py  email_service.py  product_service.py  user_service.py
fastAPI_shop/app/tasks/: ai_tasks.py  email_tasks.py  inventory_tasks.py
fastAPI_shop/frontend/: Dockerfile  package.json
fastAPI_shop/frontend/src/: App.jsx  index.css
fastAPI_shop/frontend/src/components/: Footer.jsx
fastAPI_shop/frontend/src/views/: Checkout.jsx  Login.jsx  ProductDetail.jsx  Profile.jsx
frontend/: index.html  vite.config.js
frontend/src/: App.css
frontend/src/components/: Header.jsx
frontend/src/views/: Cart.jsx  Home.jsx  OrderList.jsx  ProductList.jsx  Register.jsx
nginx/conf.d/: default.conf
